fix combo list text-align
git-svn-id: https://svn.bgdi.admin.ch/mf-chsdi/trunk/chsdi@593 e100092c-b5e6-494f-8bdf-19c1ff2a4001

--- a/chsdi/public/GeoAdmin.ux/BaseLayerTool/css/baselayertool.css
+++ b/chsdi/public/GeoAdmin.ux/BaseLayerTool/css/baselayertool.css
@@ -1,3 +1,7 @@
+.x-combo-list-item {
+    text-align: left;
+}
+
 .geoadmin-baselayertool .geoadmin-baselayertool-label {
     font: bold 12px arial,helvetica,verdana,sans-serif;
     /* line-height is set to a sensible value here. If not
